force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/leaseworks__Assembly_Utilization_Snapshot_New__c.object-meta.xml
<CustomObject>
    <description>This object is related to Assembly and Utilization Snapshot and intended to record utilization snapshots TSN/CSN As of Date when received from operator or MRO.</description>
    <label>Assembly Utilization Snapshot</label>
    <nameField>
        <label>Assembly  Utilization Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assembly Utilization Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>