force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/fields/leaseworks__Snapshot_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Snapshot_Status__c</fullName>
    <label>Snapshot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>