force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/fields/leaseworks__Utilization_True_Up__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_True_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The latest true-up Utilization record as of Snapshot Date if any</inlineHelpText>
    <label>Utilization True Up</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Assembly Utilization Snapshots (Utilization True Up)</relationshipLabel>
    <relationshipName>Assembly_Utilization_Snapshots4</relationshipName>
    <type>Lookup</type>
</CustomField>