force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/fields/leaseworks__Y_Hidden_Assembly_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Assembly_Name__c</fullName>
    <formula>leaseworks__Assembly_Lkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Assembly Name</label>
    <type>Text</type>
</CustomField>