force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/fields/leaseworks__Y_Hidden_AssetId__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_AssetId__c</fullName>
    <formula>CASESAFEID(leaseworks__Utilization_Snapshot__r.leaseworks__Asset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_AssetId</label>
    <type>Text</type>
</CustomField>