force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/fields/leaseworks__Y_Hidden_CSNOffset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_CSNOffset__c</fullName>
    <label>_CSNOffset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>