force-app/main/default/objects/leaseworks__Assembly_Utilization_Snapshot_New__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Assembly_Type__c</field>
        <operation>equals</operation>
        <value>APU</value>
    </filters>
    <label>All</label>
</ListView>